pidgin/css/pidgin.css
/* ... */
main aside.opening h2, main aside.closing h2 { 
    margin-top: 0;
}

main aside.opening a, main aside.closing a { 
    color: black;
}

main aside.opening {
    background:#FF9CFF;
} 

main aside.opening a {
    --underline-background-color:#FF9CFF;
} 

main aside.closing {
    background: #E0FF00;
} 

main aside.closing a {
    --underline-background-color:#E0FF00;
}

main aside.more-links {
    grid-column: 3 / 10;
    margin-bottom: 6em;
    padding: 1em;

    font-family: "DM Sans";
    border: 4px solid #E0E0E0;
    border-radius: 16px;
}

main aside.more-links h2 {
    margin-top: 0;

    font-family: "DM Sans";
    font-size: 1.7em;
}

main aside.more-links ul {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    margin: 0;
    padding: 0;

    list-style: none;
    line-height: 1.4;
    font-size: 1em;
    font-weight: 600;
}

main blockquote {
    grid-column: 2/8;
    padding: 4em;
    margin-bottom: 4em;

    font-family: "DM Sans";
    background: #F5F5F5;
    border: 4px solid black;
    border-radius: 16px;
}


main blockquote p {
    /* display: grid;
    grid-template-columns: 1fr 3fr; */
    margin: 0;
    position: relative;

    font-size: 1.4em;
    font-weight: 400;
    line-height: 1.4;
}

main blockquote p:before {
    /* grid-column-start: 1; */
    position: absolute;
    left: -3.3em;
    top: 2em;
}

main blockquote p:after {
    position: absolute;
    right: -10em;
    bottom: -4em;
    z-index: -1;

    content: '';
    width: 30%;
    height: 120%;
    background: var(--vocabulary-neutral-color-lighter-gray);
    border-radius: 16px;
}



.blog-index header h1 {
    padding-left: 0;
}

.blog-index header figure {
    order: 1;
}

.blog-index main .post.featured {
    grid-column: 2 / 11;
    margin-top: 6em;
    margin-bottom: 8em;
    padding: 3em;

    grid-template-columns: 1fr 1fr;
    grid-template-areas:
        'image title'
        'image teaser';

    position: relative;
    text-align: left;
    position: relative;
    text-align: left;

    background: #F5F5F5;
    font-family: "DM Sans";
    border: 4px solid black;
    border-radius: 16px;
    font-family: "DM Sans";
}

.blog-index main .post.featured a {
    --underline-background-color: #F5F5F5;

    color: black;
}

.blog-index main .post.featured h2 {
    font-family: "DM Sans";
    font-size: 1.5em;
}

.blog-index main .post.featured .byline {
    font-size: 1.2em;
}

.blog-index main .post.featured figure {
    grid-area: image;
}

.blog-index main .post.featured figure img {
    border-radius: 16px;
}

.blog-index main .post.featured figure figcaption {
    margin-top: 1em;

    font-family: "DM Mono";
    font-size: .7em;
}

.blog-index main .post.featured p {
    grid-column-start: 2;
    grid-area: teaser;

    font-size: 1.3em;
    line-height: 1.2;
}

.blog-index main .post.featured .byline a {
    color:#2E1FB8;
}

.blog-index main .posts h2 {

    text-align: left;

}



.blog-post header h1 {
    padding-left: 0;
}

.blog-post header figure {
    order: 1;
}


.event-post header h1 {
    padding-left: 0;
}

.event-post header figure {
    order: 1;
}

.event-post aside.sidebar .event-meta {
    margin-bottom: 6em;
    padding: 3em;

    background: #F5F5F5;
    font-family: "DM Sans";
    border: 4px solid black;
    border-radius: 16px;
}

.event-post aside.sidebar .event-meta h2 {
    margin-top: 0;

    color:#2E1FB8;
}

.event-post aside.sidebar .event-meta a {
    --underline-background-color:#FF9CFF;
    display: inline-block;
    box-sizing: border-box;
    width: 100%;
    margin-top: 1em;
    padding: .8em 1.8em;
    
    
    font-family: "DM Sans";
    font-weight: 700;
    font-size: 1.2em;
    color: black;
    background:#FF9CFF;
    border-radius: 60px;
    text-transform: capitalize;
    text-align: center;
}

.event-post aside.sidebar .event-meta a:hover {
    --underline-background-color:black;

    color: white;
    background:black;
}

.training-index header h1 {
    padding-left: 0;
}

.training-index header figure {
    order: 1;
}

.training-index article .topic-summary a {
    /* font-size: 1rem; */
}

.training-index article .topic-summary a:hover {
    /* font-size: 1rem; */
}

.training-index .topic-dive {
    grid-column: 2/11;
}

.training-index .topic-summary .trainings {
    grid-column: span 2;
    margin-top: 4em;

    font-size: 13.4px;
}

.training-index .topic-summary .trainings ul {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1em;

    list-style: none;
    margin: 0;
    padding: 0;
}

.training-index .topic-summary .trainings > ul > li {
    padding: 2em;

    background: white;
    font-family: "DM Sans";
    border: 4px solid black;
    border-radius: 16px;
}

.training-index .topic-summary .trainings > ul > li:nth-child(1) {
    border-color:#FF9CFF;
}

.training-index .topic-summary .trainings > ul > li:nth-child(1) a {
    background-color:#FF9CFF;
}

.training-index .topic-summary .trainings > ul > li:nth-child(2) {
    border-color:#ADFF00
}

.training-index .topic-summary .trainings > ul > li:nth-child(2) a {
    --underline-background-color:#ADFF00;
    background-color:#ADFF00;
}

.training-index .topic-summary .trainings > ul > li:nth-child(3) {
    border-color:#FFD9CC;
    
}

.training-index .topic-summary .trainings > ul > li:nth-child(3) a {
    --underline-background-color:#FFD9CC;
    background-color:#FFD9CC; 
}

.training-index .topic-summary .trainings > ul > li:nth-child(4) {
    border-color:#E0FF00;
}

.training-index .topic-summary .trainings > ul > li:nth-child(4) a {
    --underline-background-color:#E0FF00;
    background-color:#E0FF00;
}

.training-index .topic-summary .trainings > ul > li a:hover {
    --underline-background-color: black;
    border-color: transparent;
    background-color: black;
}


.casetudies-index header h1 {
    padding-left: 0;
}

.casestudies-index header figure {
    order: 1;
}
/* ... */

